<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_interacoes"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/interacoes" />

    <item
        android:id="@+id/navigation_device"
        android:icon="@drawable/ic_devices_other_black_24dp"
        android:title="@string/devices" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_assistant_black_24dp"
        android:title="@string/skills" />

    <item
        android:id="@+id/navigation_configs"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/configuracoes" />

</menu>