<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewProjectType"
            android:enabled="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projeto_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewProject"
            android:enabled="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="250dp">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textColor="#fff"
            android:background="@drawable/button_color"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:id="@+id/btnEditProject"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/excluir"
            android:textColor="#fff"
            android:background="@drawable/button_color"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:id="@+id/btnRemoveProject"/>

    </LinearLayout>


</LinearLayout>