<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarefa"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewHomeWorkType"
            android:enabled="false"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewHomeWorkSubject"
            android:enabled="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarefa_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewHomeWork"
            android:enabled="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrega_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewHomeWorkDelivery"
            android:enabled="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtViewHomeWorkDescription"
            android:enabled="false"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textColor="#fff"
            android:background="@drawable/button_color"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:id="@+id/btnEditHomeWork"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/excluir"
            android:textColor="#fff"
            android:background="@drawable/button_color"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:id="@+id/btnRemoveHomeWork"/>

    </LinearLayout>

</LinearLayout>