<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracoes"
        android:textColor="#fff"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtServerAddress"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port_"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:id="@+id/txtAddDescription"
            />

    </LinearLayout>


    <Button
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_color"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="250dp"
        android:id="@+id/btnSaveConfigs"/>
</LinearLayout>